--- a/src/components/Menu/_menu.scss
+++ b/src/components/Menu/_menu.scss
@@ -85,10 +85,12 @@
             position: relative;
             top: -11px;
             left: -110px;
-            background-color: #1c0080;
+            background-color: #8469e4;
+            opacity: 0.9;
             border-radius: 8px;
             padding: 3px;
             font-size: 14px;
+            font-weight: 500;
         }
     }
 
