--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -64,6 +64,7 @@
             border-radius: 6px;
             border: none;
             background-color: #e09026;
+            color: black !important;
 
 
             &:hover {
