--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,30 @@
   padding: 0;
 }
 
+:root {
+  color-scheme: light only;
+  forced-color-adjust: none;
+}
+
+body {
+  background-color: white;
+  color: black;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: white;
+    color: black;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: white;
+    color: black;
+  }
+}
+
 .container {
   width: 1140px;
   margin: 0 auto;
@@ -13,6 +37,7 @@ a {
   text-decoration: none;
   color: black;
   display: block;
+  -webkit-tap-highlight-color: transparent;
 }
 
 button {
