--- a/src/components/Cart/_cart.scss
+++ b/src/components/Cart/_cart.scss
@@ -67,6 +67,7 @@
             margin-right: 30px;
             padding: 0;
             cursor: pointer;
+            color: black !important;
 
             &:hover {
                 background-color: #fff;
@@ -116,14 +117,14 @@
         &-count {
             padding: 0px 10px;
 
-            input {
+            input[type="number"] {
                 text-align: center;
                 height: 25px;
                 width: 35px;
                 border-radius: 6px;
                 -webkit-appearance: none;
                 -moz-appearance: textfield;
-                appearance: none;
+                appearance: textfield;
                 margin: 0;
 
                 &::-webkit-outer-spin-button,
@@ -164,6 +165,7 @@
             width: 60px;
             border-radius: 6px;
             cursor: pointer;
+            color: black !important;
         }
     }
 
@@ -180,6 +182,7 @@
             width: 150px;
             background-color: #c8c9c6;
             cursor: pointer;
+            color: black !important;
 
             &:hover {
                 background-color: #8e8f8d;
@@ -207,6 +210,7 @@
                 height: 30px;
                 cursor: pointer;
                 background-color: #dac23a;
+                color: black !important;
 
                 &:hover {
                     background-color: #d4d65d;
