--- a/src/components/Filter/_filters.scss
+++ b/src/components/Filter/_filters.scss
@@ -57,7 +57,6 @@
             }
 
             input {
-                transform: scale(1.2);
                 margin-right: 10px;
                 cursor: pointer;
             }
@@ -69,8 +68,8 @@
         user-select: none;
         width: 190px;
 
-        &-inputleft,
-        &-inputright {
+        &-inputleft[type="number"],
+        &-inputright[type="number"] {
             border-radius: 8px;
             padding: 4px;
             border: 1px solid black;
@@ -80,6 +79,9 @@
             border-radius: 6px;
             margin-right: 10px;
 
+            -moz-appearance: textfield;
+            -webkit-appearance: none;
+            appearance: textfield;
 
             &::-webkit-outer-spin-button,
             &::-webkit-inner-spin-button {
@@ -146,13 +148,28 @@
                 width: 15px;
                 height: 15px;
                 border-radius: 50%;
-                background: #4CAF50;
+                background: #4CAF50 !important;
                 cursor: pointer;
                 pointer-events: auto;
                 margin-top: -2px;
             }
 
             input[type="range"]::-webkit-slider-runnable-track {
+                height: 10px;
+                background: transparent;
+            }
+
+            .slider-left::-moz-range-thumb,
+            .slider-right::-moz-range-thumb {
+                width: 15px;
+                height: 15px;
+                border-radius: 50%;
+                background: #4CAF50;
+                cursor: pointer;
+                pointer-events: auto;
+            }
+
+            input[type="range"]::-moz-range-track {
                 height: 10px;
                 background: transparent;
             }
