--- a/src/components/Items/_items.scss
+++ b/src/components/Items/_items.scss
@@ -38,6 +38,9 @@
             border-radius: 8px;
             padding: 5px;
             cursor: pointer;
+            background-color: #fff;
+            border: 1px solid black;
+            color: black !important;
 
             &:focus {
                 border-color: aqua;
@@ -113,7 +116,7 @@
         padding: 8px;
         border-radius: 8px;
         background-color: #b8ce62;
-        color: #ffff;
+        color: #ffff !important;
         border: none;
         font-size: 15px;
 
