--- a/src/components/Menu/_menu.scss
+++ b/src/components/Menu/_menu.scss
@@ -2,7 +2,7 @@
     width: 300px;
     height: 100%;
     top: 0;
-    background-color: #d8d8d8;
+    background-color: #d8d8d8 !important;
     z-index: 99;
     position: fixed;
     transform: translateX(-100%);
@@ -16,7 +16,7 @@
     }
 
     &__head {
-        background-color: #727171;
+        background-color: #727171 !important;
         display: flex;
         padding: 10px;
         align-items: center;
@@ -36,10 +36,15 @@
             &-select {
                 padding-right: 10px;
                 outline: none;
-                border: none;
                 font-size: 17px;
                 cursor: pointer;
                 background-color: #727171;
+                border-color: #727171;
+                cursor: pointer;
+                padding-right: 5px;
+                box-shadow: none;
+                border-style: solid;
+                color: black !important;
             }
         }
 
