--- a/src/components/Promotion/_promotion.scss
+++ b/src/components/Promotion/_promotion.scss
@@ -23,7 +23,7 @@
             display: flex;
 
             a {
-                color: chocolate;
+                color: chocolate !important;
                 padding-left: 5px;
             }
         }
